k8s/jobs/ingress_nginx_relative_path/default.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ingress-nginx-relative-path-app1
spec: 
  selector: 
    matchLabels: 
      app: ingress-nginx-relative-path-app1
  template: 
    metadata: 
      labels: 
        app: ingress-nginx-relative-path-app1
    spec: 
      containers: 
        - 
          image: "ledongthuc/hello-api:latest"
          name: ingress-nginx-relative-path-app1
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ingress-nginx-relative-path-app2
spec: 
  selector: 
    matchLabels: 
      app: ingress-nginx-relative-path-app2
  template: 
    metadata: 
      labels: 
        app: ingress-nginx-relative-path-app2
    spec: 
      containers: 
        - 
          image: "ledongthuc/hello-api:latest"
          name: ingress-nginx-relative-path-app2
