k8s/jobs/ingress_nginx_relative_path/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-relative-path-app1
  annotations:
    kubernetes.io/ingress.class: "nginx" # ingress will scan it
spec:
  rules:
  - http:
      paths:
      - path: /css/
        backend:
          serviceName: ingress-nginx-relative-path-app1
          servicePort: 8080
      - path: /random*
        backend:
          serviceName: ingress-nginx-relative-path-app1
          servicePort: 8080
      - path: /
        backend:
          serviceName: ingress-nginx-relative-path-app1
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-relative-path-app2
  annotations:
    kubernetes.io/ingress.class: "nginx" # ingress will scan it
spec:
  rules:
  - http:
      paths:
      - path: /api/
        backend:
          serviceName: ingress-nginx-relative-path-app2
          servicePort: 8080
